test/conformance/chainsaw/validate/clusterpolicy/standard/cel/cel-variables/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: image-matches-namespace-environment.policy.example.com
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
