test/conformance/chainsaw/validate/clusterpolicy/standard/cel/cel-variables/03-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      file: deployments-pass.yaml
  - apply:
      check:
        (error != null): true
      file: deployments-fail.yaml
