test/conformance/chainsaw/validate/clusterpolicy/standard/cel/cel-variables/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: cel-variables
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-03
    try:
    - apply:
        file: deployments-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deployments-fail.yaml
  - name: step-04
    try:
    - sleep:
        duration: 3s
